# spacegame-cpp

./: CMakeLists.txt  Makefile  main.cc  matrix.cc  matrix.h
src/: CMakeLists.txt  controls.cc  controls.h  display.cc  display.h  main.cc  matrix.cc  matrix.h
src/game/: planet.cc  planet.h  spaceship.cc  spaceship.h  stats.cc  stats.h
